# visualizer2

./: .pre-commit-config.yaml  Cargo.toml  README.md
beat-delay/: Cargo.toml  visualizer.toml
beat-delay/src/: main.rs
no-dmx/: Cargo.toml
no-dmx/src/: main.rs
no-midi/: Cargo.toml  README.md  visualizer.toml
no-midi/src/: main.rs
noa-35c3/: Cargo.toml  visualizer.toml
noa-35c3/src/: main.rs
noa-35c3/src/shaders/: background.frag  color.frag
noambition/: Cargo.toml  visualizer.toml
noambition/src/: main.rs
noambition/src/shaders/: background.frag  pp.vert  prepass.frag  prepass.vert
spectral/: Cargo.toml  visualizer.toml
spectral/src/: main.rs
vis-core/: Cargo.toml  README.md  visualizer.toml
vis-core/examples/: analyze.rs
vis-core/src/: frames.rs  helpers.rs  lib.rs  visualizer.rs
vis-core/src/analyzer/: beat.rs  fourier.rs  mod.rs  samples.rs  spectrum.rs
vis-core/src/recorder/: cpal.rs  mod.rs  pulse.rs
