[package]
authors = ["Rahix <rahix@rahix.de>"]
edition = "2021"
name = "vis-core"
version = "0.1.0"

[dependencies]
apodize = "1.0.0"
env_logger = "0.10.0"
ezconf = "0.3.0"
log = "0.4.17"
parking_lot = "0.12.1"
rustfft = "6.1.0"
color-backtrace = "0.5.1"
triple_buffer = "6.2.0"

[dependencies.cpal]
optional = true
version = "0.15.0"

[dependencies.pulse-simple]
optional = true
version = "1.0.1"

[features]
default = ["cpalrecord"]
pulseaudio = ["pulse-simple"]
cpalrecord = ["cpal"]
